Add laser pickup, controls menu and various improvements

--- a/settings.json
+++ b/settings.json
@@ -9,5 +9,13 @@
   "minEnemies": 3,
   "maxEnemies": 10,
   "gravityMultiplier": 0.5,
-  "planetGravityMultiplier": 20
+  "planetGravityMultiplier": 8,
+  "bulletLife": 3,
+  "shieldDuration": 30,
+  "exhaustLife": 0.7,
+  "maxSpeed": 4,
+  "bulletMass": 0.5,
+  "gravityRangeFactor": 10.5,
+  "gravityWarningRatio": 0.8,
+  "enemyDetection": 300
 }
